--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: timescale/timescaledb:latest-pg17
+    image: postgres:17
     container_name: opening_bell_postgres
     environment:
       POSTGRES_DB: opening_bell
